pulpit tests - bank transfer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 	</head>
 	<body>
 		<p>Hello World</p>
+		<p>Hello World</p>
+
+		<!-- <button onclick="myFunction()">Try it</button>
+		<script>
+			function myFunction() {
+				confirm("Press a button!");
+			}
+		</script> -->
 
 		<script src="vanillajs_practice.js" defer></script>
 	</body>
